faciliter la navigation entre les projets

--- a/index.html
+++ b/index.html
@@ -336,7 +336,11 @@
 
       <div class="row">
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" id="card-generator">
-          <div class="icon"><i class="bi bi-card-checklist"></i></div>
+          <div class="icon">
+            <a href="projets/projet1/card-generator/index.html">
+            <i class="bi bi-card-checklist"></i>
+            </a>
+          </div>
           <h4 class="title"><a href="projets/projet1/card-generator/index.html">GENERATEUR DE CARD</a></h4>
           <p class="description">
             Cette section contient une application complète des notions de javaScript 
@@ -345,7 +349,11 @@
           </p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100" id="password-generator">
-          <div class="icon"><i class="bi bi-card-list"></i></div>
+          <div class="icon">
+            <a href="projets/projet1/generator-password/index.html">
+              <i class="bi bi-card-list"></i>
+            </a>
+          </div>
           <h4 class="title"><a href="projets/projet1/generator-password/index.html">GENERATEUR DE MOT DE PASS</a></h4>
           <p class="description">
             ce projet contient des applications aussi avec mon apprentissage de javaScript.
@@ -353,21 +361,32 @@
           </p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200" id="mover-sentences">
-          <div class="icon"><i class="bi bi-calendar4-week"></i></div>
+          <div class="icon">
+            <a href="projets/projet1/mover-sentences/index.html">
+              <i class="bi bi-calendar4-week"></i>
+            </a>
+          </div>
           <h4 class="title"><a href="projets/projet1/mover-sentences/index.html">DEPLACEUR DE PHRASES</a></h4>
           <p class="description">
             deplacer des phrases par défilement
           </p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300" id="quizz-app">
-          <div class="icon"><i class="bi bi-binoculars"></i></div>
+          <div class="icon">
+            <a href="projets/projet1/quizz/index.html">
+              <i class="bi bi-binoculars"></i>
+            </a>
+          </div>
           <h4 class="title"><a href="projets/projet1/quizz/index.html">JEU DE QUIZZ</a></h4>
           <p class="description">
               Quiz app une application pour permettre à jouer et afficher le resultat en final
           </p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400" id="notification">
-          <div class="icon"><i class="bi bi-brightness-high"></i></div>
+          <div class="icon">
+            <a href="projets/projet2/TP1-Notification/">
+              <i class="bi bi-brightness-high"></i></div>
+            </a>
           <h4 class="title"><a href="projets/projet2/TP1-Notification/">générateurs de Notifications</a></h4>
           <p class="description">
             Cette section permet générer des Notification savec 
@@ -375,14 +394,21 @@
           </p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500" id="carrousse">
-          <div class="icon"><i class="bi bi-calendar4-week"></i></div>
+          <div class="icon">
+            <a href="projets/projet2/caroussel-last-version/">
+              <i class="bi bi-calendar4-week"></i></div>
+            </a>
           <h4 class="title"><a href="projets/projet2/caroussel-last-version/">carroussel</a></h4>
           <p class="description">
               générateur de Notifications avec des couleurs qui y va avec
           </p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400" id="compte-a-rebour">
-          <div class="icon"><i class="bi bi-brightness-high"></i></div>
+          <div class="icon">
+            <a href="projets/projet2/TP4-Compte-Rebours/">
+              <i class="bi bi-brightness-high"></i>
+            </a>
+          </div>
           <h4 class="title"><a href="projets/projet2/TP4-Compte-Rebours/">compte à rebour</a></h4>
           <p class="description">
             Cette application permet de dire avec exactitude le nombre de jours,heures,minutes et secondes
@@ -390,7 +416,11 @@
           </p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500" id="film">
-          <div class="icon"><i class="bi bi-calendar4-week"></i></div>
+          <div class="icon">
+            <a href="projets/projet2/TP5-Manipulation-Api-Film/index.html">
+              <i class="bi bi-calendar4-week"></i>
+            </a>
+          </div>
           <h4 class="title"><a href="projets/projet2/TP5-Manipulation-Api-Film/index.html">Film</a></h4>
           <p class="description">
             Cette section contient une liste de film.
@@ -398,7 +428,11 @@
           </p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400" id="recette">
-          <div class="icon"><i class="bi bi-prescription2"></i></div>
+          <div class="icon">
+            <a href="projets/projet2/TP6-Manipulation-API-Recette/index.html">
+              <i class="bi bi-textarea-resize"></i>
+            </a>
+          </div>
           <h4 class="title"><a href="projets/projet2/TP6-Manipulation-API-Recette/index.html">Générateur de Recettes</a></h4>
           <p class="description">
             Cette section permet de générer des recette aléatoirement.
@@ -408,7 +442,11 @@
         </div>
 
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400" id="trello">
-          <div class="icon"><i class="bi bi-prescription2"></i></div>
+          <div class="icon">
+            <a href="projets/projet-trello/index.html">
+              <i class="bi bi-prescription2"></i>
+            </a>
+          </div>
           <h4 class="title"><a href="projets/projet-trello/index.html">Trello </a></h4>
           <p class="description">
            Cette application est la clone de <i>TRELLO</i>
