--- a/index.html
+++ b/index.html
@@ -470,8 +470,35 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Experience Professionnelle</h3>
             <div class="resume-item">
-              <h5>Janvier 2023 - present</h5>
-              <h4>développeur fullstack Freelencer</h4>
+              <h5>Janvier 2023 - Présent</h5>
+              <h4>développeur fullstack Freelancer</h4>
+              <p> 
+                <a href="https://livelean.nl">
+                  <em>
+                    chez <b>livelean</b>
+                  </em>
+                </a>  
+              </p>
+              <ul>
+                <!-- <li>refonte d'une application qui existait déjà mais lente car elle traite beaucoup de données à la fois. <i>j'ai utilisé les technologies suivantes :</i> </li> -->
+                <ul>
+                  <li><b>PHP</b></li>
+                  <li><b>JS</b></li>
+                </ul>
+                <li class="">
+                  
+                </li>
+                <li>
+                  <a href="https://livelean.nl">
+                    lien vers l'appli
+                  </a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h5>Janvier 2023 - Mars 2023</h5>
+              <h4>développeur fullstack Freelancer</h4>
               <p> 
                 <a href="https://faseya.com">
                   <em>
@@ -498,7 +525,7 @@
             </div>
             
             <div class="resume-item">
-              <h5>Août 2022 - present</h5>
+              <h5>Août 2022 - Mars 2023</h5>
               <h4>développeur fullstack</h4>
               <p> 
                 <a href="">
