making the referencement

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Portfolio KHADIM NIASS</title>
-  <meta content="" name="description">
+  <meta content="développeur frontend backend mobile fullstack au sénégal, Freelancer" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -126,7 +126,7 @@
             <p class="mt-3">
               Je suis <b>Khadim Niass</b> titulaire d’un baccalauréat en série S1 (Mathématiques, Sciences Physiques) depuis 2017 à la session normale.
 
-              je suis également titulaire d'une Licence professionnelle en mathématiques informatiques appliquées et un certificat en développement web full stack web/mobile 
+              je suis également titulaire d'une Licence professionnelle en mathématiques informatiques appliquées et un certificat en <h4> développement web full stack web - mobile</h4>
 
               Passionné par l’univers du numérique et doté d’une grande curiosité, Polyvalent et fort près de 5 ans de connaissance dans le domaine de l'informatique. 
 
