ajouter quelques compétences...

--- a/index.html
+++ b/index.html
@@ -337,6 +337,19 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" id="card-generator">
           <div class="icon">
+            <a href="https://starmint-nft.com/">
+            <i class="bi bi-card-checklist"></i>
+            </a>
+          </div>
+          <h4 class="title"><a href="https://starmint-nft.com/">Starmint</a></h4>
+          <p class="description">
+            Ce projet a été réalisé au sein de <i>fasea</i> une application de <i>blockchain</i>
+            ou l'utilisateur peut faire des mints lui-même et ça sera enregistré chez polygone ou Etherum,
+            voir la liste de ses mints... 
+          </p>
+        </div>
+        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" id="card-generator">
+          <div class="icon">
             <a href="projets/projet1/card-generator/index.html">
             <i class="bi bi-card-checklist"></i>
             </a>
