ajouter le chatboot

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <a href="https://linkedin.com/in/khadim-niass" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/khadimniass" class="github"><i class="bx bxl-github"></i></a>
           <a href="https://wa.me/+221771958713" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+          <a href="https://join.skype.com/invite/oxRyY0TgcASe" class="skype"><i class="bx bxl-skype"></i></a>
         </div>
       </div>
       <nav id="navbar" class="nav-menu navbar">
@@ -897,5 +898,8 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/139542004.js"></script>
+<!-- End of HubSpot Embed Code -->
 </body>
 </html>
