ajouter ouvrir nouvelle page au click

--- a/index.html
+++ b/index.html
@@ -338,11 +338,11 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" id="card-generator">
           <div class="icon">
-            <a href="https://starmint-nft.com/">
+            <a href="https://starmint-nft.com/" target="_blank">
             <i class="bi bi-card-checklist"></i>
             </a>
           </div>
-          <h4 class="title"><a href="https://starmint-nft.com/">Starmint</a></h4>
+          <h4 class="title"><a href="https://starmint-nft.com/" target="_blank" >Starmint</a></h4>
           <p class="description">
             Ce projet a été réalisé au sein de <i>fasea</i> une application de <i>blockchain</i>
             ou l'utilisateur peut faire des mints lui-même et ça sera enregistré chez polygone ou Etherum,
@@ -351,11 +351,11 @@
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" id="card-generator">
           <div class="icon">
-            <a href="projets/projet1/card-generator/index.html">
+            <a href="projets/projet1/card-generator/index.html" target="_blank">
             <i class="bi bi-card-checklist"></i>
             </a>
           </div>
-          <h4 class="title"><a href="projets/projet1/card-generator/index.html">GENERATEUR DE CARD</a></h4>
+          <h4 class="title"><a href="projets/projet1/card-generator/index.html" target="_blank">GENERATEUR DE CARD</a></h4>
           <p class="description">
             Cette section contient une application complète des notions de javaScript 
             et les évènements. Appuyer sur
@@ -364,11 +364,11 @@
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100" id="password-generator">
           <div class="icon">
-            <a href="projets/projet1/generator-password/index.html">
+            <a href="projets/projet1/generator-password/index.html" target="_blank">
               <i class="bi bi-card-list"></i>
             </a>
           </div>
-          <h4 class="title"><a href="projets/projet1/generator-password/index.html">GENERATEUR DE MOT DE PASS</a></h4>
+          <h4 class="title"><a href="projets/projet1/generator-password/index.html" target="_blank">GENERATEUR DE MOT DE PASS</a></h4>
           <p class="description">
             ce projet contient des applications aussi avec mon apprentissage de javaScript.
             Où on a la possibilité de contruire un mot de passe solide avec des choix personnalisés
@@ -376,32 +376,32 @@
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200" id="mover-sentences">
           <div class="icon">
-            <a href="projets/projet1/mover-sentences/index.html">
+            <a href="projets/projet1/mover-sentences/index.html" target="_blank">
               <i class="bi bi-calendar4-week"></i>
             </a>
           </div>
-          <h4 class="title"><a href="projets/projet1/mover-sentences/index.html">DEPLACEUR DE PHRASES</a></h4>
+          <h4 class="title"><a href="projets/projet1/mover-sentences/index.html" target="_blank">DEPLACEUR DE PHRASES</a></h4>
           <p class="description">
             deplacer des phrases par défilement
           </p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300" id="quizz-app">
           <div class="icon">
-            <a href="projets/projet1/quizz/index.html">
+            <a href="projets/projet1/quizz/index.html" target="_blank">
               <i class="bi bi-binoculars"></i>
             </a>
           </div>
-          <h4 class="title"><a href="projets/projet1/quizz/index.html">JEU DE QUIZZ</a></h4>
+          <h4 class="title"><a href="projets/projet1/quizz/index.html" target="_blank">JEU DE QUIZZ</a></h4>
           <p class="description">
               Quiz app une application pour permettre à jouer et afficher le resultat en final
           </p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400" id="notification">
           <div class="icon">
-            <a href="projets/projet2/TP1-Notification/">
+            <a href="projets/projet2/TP1-Notification/" target="_blank">
               <i class="bi bi-brightness-high"></i></div>
             </a>
-          <h4 class="title"><a href="projets/projet2/TP1-Notification/">générateurs de Notifications</a></h4>
+          <h4 class="title"><a href="projets/projet2/TP1-Notification/" target="_blank">générateurs de Notifications</a></h4>
           <p class="description">
             Cette section permet générer des Notification savec 
             des couleurs appropiées.
@@ -409,21 +409,21 @@
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500" id="carrousse">
           <div class="icon">
-            <a href="projets/projet2/caroussel-last-version/">
+            <a href="projets/projet2/caroussel-last-version/" target="_blank">
               <i class="bi bi-calendar4-week"></i></div>
             </a>
-          <h4 class="title"><a href="projets/projet2/caroussel-last-version/">carroussel</a></h4>
+          <h4 class="title"><a href="projets/projet2/caroussel-last-version/" target="_blank">carroussel</a></h4>
           <p class="description">
               générateur de Notifications avec des couleurs qui y va avec
           </p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400" id="compte-a-rebour">
           <div class="icon">
-            <a href="projets/projet2/TP4-Compte-Rebours/">
+            <a href="projets/projet2/TP4-Compte-Rebours/" target="_blank">
               <i class="bi bi-brightness-high"></i>
             </a>
           </div>
-          <h4 class="title"><a href="projets/projet2/TP4-Compte-Rebours/">compte à rebour</a></h4>
+          <h4 class="title"><a href="projets/projet2/TP4-Compte-Rebours/" target="_blank" >compte à rebour</a></h4>
           <p class="description">
             Cette application permet de dire avec exactitude le nombre de jours,heures,minutes et secondes
             de l'année prochaine          
@@ -431,11 +431,11 @@
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500" id="film">
           <div class="icon">
-            <a href="projets/projet2/TP5-Manipulation-Api-Film/index.html">
+            <a href="projets/projet2/TP5-Manipulation-Api-Film/index.html" target="_blank">
               <i class="bi bi-calendar4-week"></i>
             </a>
           </div>
-          <h4 class="title"><a href="projets/projet2/TP5-Manipulation-Api-Film/index.html">Film</a></h4>
+          <h4 class="title"><a href="projets/projet2/TP5-Manipulation-Api-Film/index.html" target="_blank" >Film</a></h4>
           <p class="description">
             Cette section contient une liste de film.
             Application de cours javaScript pour consommer un API.
@@ -443,11 +443,11 @@
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400" id="recette">
           <div class="icon">
-            <a href="projets/projet2/TP6-Manipulation-API-Recette/index.html">
+            <a href="projets/projet2/TP6-Manipulation-API-Recette/index.html" target="_blank">
               <i class="bi bi-textarea-resize"></i>
             </a>
           </div>
-          <h4 class="title"><a href="projets/projet2/TP6-Manipulation-API-Recette/index.html">Générateur de Recettes</a></h4>
+          <h4 class="title"><a href="projets/projet2/TP6-Manipulation-API-Recette/index.html" target="_blank">Générateur de Recettes</a></h4>
           <p class="description">
             Cette section permet de générer des recette aléatoirement.
             On peut à chaque recette voir les détails ainsi que la vidéo de préparation.
@@ -457,11 +457,11 @@
 
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400" id="trello">
           <div class="icon">
-            <a href="projets/projet-trello/index.html">
+            <a href="projets/projet-trello/index.html" target="_blank">
               <i class="bi bi-prescription2"></i>
             </a>
           </div>
-          <h4 class="title"><a href="projets/projet-trello/index.html">Trello </a></h4>
+          <h4 class="title"><a href="projets/projet-trello/index.html" target="_blank" >Trello </a></h4>
           <p class="description">
            Cette application est la clone de <i>TRELLO</i>
            générateur de card, et beaucoup d'autres applications
