--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         <img src="assets/img/my_puctures/menu.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="">KHADIM NIASS</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://stackoverflow.com/users/18308310/khadim-niass" class="stack-overflow"><i class="bx bxl-stack-overflow"></i></a>
-          <a href="https://gitlab.com/niassssn" class="gitlab"><i class="bx bxl-gitlab"></i></a>
-          <a href="https://linkedin.com/in/khadim-niass" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://github.com/khadimniass" class="github"><i class="bx bxl-github"></i></a>
-          <a href="https://wa.me/+221771958713" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
-          <a href="https://join.skype.com/invite/oxRyY0TgcASe" class="skype"><i class="bx bxl-skype"></i></a>
+          <a href="https://stackoverflow.com/users/18308310/khadim-niass" class="stack-overflow" target="_blank"><i class="bx bxl-stack-overflow"></i></a>
+          <a href="https://gitlab.com/niassssn" class="gitlab" target="_blank"><i class="bx bxl-gitlab"></i></a>
+          <a href="https://linkedin.com/in/khadim-niass" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/khadimniass" class="github" target="_blank"><i class="bx bxl-github"></i></a>
+          <a href="https://wa.me/+221771958713" class="whatsapp" target="_blank"><i class="bx bxl-whatsapp"></i></a>
+          <a href="https://join.skype.com/invite/oxRyY0TgcASe" target="_blank" class="skype"><i class="bx bxl-skype"></i></a>
         </div>
       </div>
       <nav id="navbar" class="nav-menu navbar">
@@ -844,7 +844,7 @@
                 </div>
                 <div class="form-group col-md-6">
                   <label for="email">Votre Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required placeholder="niassssn@gmail.com">
+                  <input type="text" class="form-control" name="email" id="email" required placeholder="niassssn@gmail.com">
                 </div>
               </div>
               <div class="form-group">
@@ -880,12 +880,12 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright text-muted">
-        &copy; Copyright <strong><span>Khadim NIASS</span></strong>
+        &copy; Copyright <strong><span>Khadim NIASS <br>2022 - <span id="date-year"></span></span></strong>
       </div>
     </div>
   </footer>
   <!-- End  Footer -->
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <!-- <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a> -->
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
@@ -899,7 +899,7 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <!-- Start of HubSpot Embed Code -->
-  <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/139542004.js"></script>
+   <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/139542004.js"></script>
 <!-- End of HubSpot Embed Code -->
 </body>
 </html>
