--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
           <a href="https://linkedin.com/in/khadim-niass" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/khadimniass" class="github" target="_blank"><i class="bx bxl-github"></i></a>
           <a href="https://wa.me/+221771958713" class="whatsapp" target="_blank"><i class="bx bxl-whatsapp"></i></a>
-          <a href="https://join.skype.com/invite/oxRyY0TgcASe" target="_blank" class="skype"><i class="bx bxl-skype"></i></a>
-        </div>
+          <!--<a href="https://join.skype.com/invite/oxRyY0TgcASe" target="_blank" class="skype"><i class="bx bxl-skype"></i></a>
+        --></div>
       </div>
       <nav id="navbar" class="nav-menu navbar">
         <ul>
@@ -153,21 +153,21 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">MVC-POO<i class="val">90%</i></span>
+              <span class="skill"><i class="bx bxl-99designs"></i>MVC-POO<i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">ANGULAR <span class="fw-bold">-</span> IONIC<i class="val">85%</i></span>
+              <span class="skill"><i class="bx bxl-angular"></i>ANGULAR <span class="fw-bold">-</span><i class="bx bxl-flutter"></i> IONIC<i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">REACTJS JSP<i class="val">80%</i></span>
+              <span class="skill"><i class="bx bxl-react"></i>REACTJS JSP<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -175,21 +175,21 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="progress">
-              <span class="skill">JAVA-Spring boot<i class="val">90%</i></span>
+              <span class="skill"><i class="bx bxl-java"></i>JAVA - <i class="bx bxl-spring-boot"></i>Spring boot<i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JAVASCRIPT - TYPESCRIPT<i class="val">75%</i></span>
+              <span class="skill"><i class="bx bxl-javascript"></i>JAVASCRIPT - TYPESCRIPT<i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">PHP - LARAVEL - SYMFONY - CAKEPHP<i class="val">90%</i></span>
+              <span class="skill"><i class="bx bxl-php"></i> PHP - <i class="bx bxl-php"></i> LARAVEL - <i class="bx bxl-php"></i> SYMFONY - <i class="bx bxl-php"></i> CAKEPHP<i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -198,7 +198,7 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="progress">
-              <span class="skill">NODEJS - mongoose - VUE-JS<i class="val">80%</i></span>
+              <span class="skill"><i class="bx bxl-nodejs"></i>NODEJS - <i class="bx bxl-mongodb"></i> mongoose - <i class="bx bxl-vuejs"></i> VUE-JS<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -212,21 +212,21 @@
             </div> -->
 
             <div class="progress">
-              <span class="skill">HTML CSS SASS SCSS JQUERY - AJAX<i class="val">100%</i></span>
+              <span class="skill"><i class="bx bxl-html5"></i>HTML <i class="bx bxl-css3"></i>CSS <i class="bx bxl-sass"></i>SASS <i class="bx bxl-css3"></i>SCSS <i class="bx bxl-jquery"></i>JQUERY - <i class="bx bxl-jquery"></i> AJAX<i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
             
             <div class="progress">
-              <span class="skill">PYTHON - DJANGO - FLASK<i class="val">80%</i></span>
+              <span class="skill"><i class="bx bxl-python"></i>PYTHON -<i class="bx bxl-django"></i> DJANGO - <i class="bx bxl-flask"></i> FLASK<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">API-PLATEFORM<i class="val">85%</i></span>
+              <span class="skill"><i class="bx bxl-php"></i>API-PLATEFORM<i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -273,7 +273,7 @@
             
           <div class="" data-aos="fade-up" data-aos-delay="100">
             <div class="progress">
-              <span class="skill">LINUX - GIT -github- docker<i class="val">85%</i></span>
+              <span class="skill"> LINUX - <i class="bx bxl-git"></i> GIT - <i class="bx bxl-github"></i> github - <i class="bx bxl-docker"></i> docker<i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -287,7 +287,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">MYSQL - POSTGRE - mongoDB<i class="val">80%</i></span>
+              <span class="skill">MYSQL - <i class="bx bxl-postgresql"></i>POSTGRESL - <i class="bx bxl-mongodb"></i>mongoDB<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -311,7 +311,7 @@
 
           <div class="" data-aos="fade-up" data-aos-delay="100">
             <div class="progress">
-              <span class="skill">Mathematiques - Cryptographie<i class="val">75%</i></span>
+              <span class="skill"><i class="bx bx-math"></i>Mathematiques - Cryptographie<i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
