--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio KHADIM NIASS</title>
+  <title>KHADIM NIASS développeur fullstack web mobile</title>
   <meta content="développeur frontend backend mobile fullstack au sénégal, Freelancer" name="description">
   <meta content="" name="keywords">
 
@@ -484,7 +484,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Experience Professionnelle</h3>
             <div class="resume-item">
-              <h5>Janvier 2023 - Présent</h5>
+              <h5>Mars 2023 - Présent</h5>
               <h4>développeur fullstack Freelancer</h4>
               <p> 
                 <a href="https://livelean.nl">
