sous tittres diplomes et expériences

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             <h3 class="resume-title">Experience Professionnelle</h3>
             <div class="resume-item">
               <h5>Mars 2023 - Présent</h5>
-              <h4>développeur fullstack Freelancer</h4>
+              <h4>développeur fullstack (backend)</h4>
               <p> 
                 <a href="https://livelean.nl">
                   <em>
@@ -497,7 +497,7 @@
                 <!-- <li>refonte d'une application qui existait déjà mais lente car elle traite beaucoup de données à la fois. <i>j'ai utilisé les technologies suivantes :</i> </li> -->
                 <ul>
                   <li><b>PHP</b></li>
-                  <li><b>JS</b></li>
+                  <li><b>JS-JQuey-Ajax</b></li>
                 </ul>
                 <li class="">
                   
@@ -512,7 +512,7 @@
 
             <div class="resume-item">
               <h5>Janvier 2023 - Mars 2023</h5>
-              <h4>développeur fullstack Freelancer</h4>
+              <h4>développeur fullstack</h4>
               <p> 
                 <a href="https://faseya.com">
                   <em>
@@ -653,37 +653,44 @@
         <div class="col-md-4 mb-2 ftco-animate fadeInUp ftco-animated certificat-hovered">
           <a   class="ftco-thumbnail image-popup">
             <img src="assets/img/certificats/bootstrapp5.png" title="certificat en bootrapp 5" alt="bootstrap 5" class="img-fluid">
+            <div class="text-center">bootrapp 5</div>
           </a>
         </div>
         <div class="col-md-4 mb-2 ftco-animate fadeInUp ftco-animated certificat-hovered">
           <a   class="ftco-thumbnail image-popup">
             <img src="assets/img/certificats/reactJS.png" alt="reactJS" title="certificat en reactJS" class="img-fluid">
+            <div class="text-center">React JS</div>
           </a>
         </div>
         <div class="col-md-4 mb-2 ftco-animate fadeInUp ftco-animated certificat-hovered">
           <a   class="ftco-thumbnail image-popup">
             <img src="assets/img/certificats/certificat-mern.png" alt="react-full" title="certificat en react MERN" class="img-fluid">
+            <div class="text-center">(M-E-R-N)</div>
           </a>
         </div>
 
         <div class="col-md-4 mb-2 ftco-animate fadeInUp ftco-animated certificat-hovered">
           <a   class="ftco-thumbnail image-popup">
             <img src="assets/img/certificats/vueJs3.png" alt="vueJs3" title="certificat en vueJS" class="img-fluid">
+            <div class="text-center">VueJS 3</div>
           </a>
         </div>
         <div class="col-md-4 mb-2 ftco-animate fadeInUp ftco-animated certificat-hovered">
           <a   class="ftco-thumbnail image-popup">
             <img src="assets/img/certificats/laravel9.png" alt="laravel9" title="certificat en Laravel9" class="img-fluid">
+            <div class="text-center">Laravel 9</div>
           </a>
         </div>
         <div class="col-md-4 mb-2 ftco-animate fadeInUp ftco-animated certificat-hovered">
           <a   class="ftco-thumbnail image-popup">
             <img src="assets/img/certificats/flutter.png" alt="flutter" title="certificat en flutter" class="img-fluid">
+            <div class="text-center">Flutter</div>
           </a>
         </div>
         <div class="col-md-4 mb-2 ftco-animate fadeInUp ftco-animated certificat-hovered">
           <a   class="ftco-thumbnail image-popup">
             <img src="assets/img/certificats/spring-boot.png" alt="spring-boot" title="certificat en spring-boot" class="img-fluid">
+            <div class="text-center">Spring</div>
           </a>
         </div>
       </div>
