reorganiser les meta data

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>KHADIM NIASS développeur fullstack web mobile</title>
-  <meta content="développeur frontend backend mobile fullstack au sénégal, Freelancer" name="description">
+  <meta content="développeur fullstack au sénégal, Freelancer" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -71,11 +71,11 @@
       <p class="text-center">
         <span class="typed" 
         data-typed-items="
-        Je suis développeur Web,
-        je suis développeur frontend,
-        Je suis développeur backend,
-        je suis développeur Mobiles,
         Je suis développeur fullstack,
+        Je suis développeur backend,
+        je suis développeur frontend,
+        Je suis développeur Web,
+        je suis développeur Mobiles,
         "></span>
       </p>
     </div>
