--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Niveau d'étude:</strong> <span class="fw-bold">LICENCE</span></li>
                   <li>
-                    <i class="bi bi-chevron-right"></i><strong>Emails:</strong>
-                    <a href="mailto:niassssn@gmail.com">niassssn@gmail.com</a>, 
-                    <a href="mailto:khadim1.niass@ucad.edu.sn">khadim1.niass@ucad.edu.sn</a>, 
-                    <a href="mailto:niasskhadim@outlook.com">niasskhadim@outlook.com</a>
+                      <i class="bi bi-chevron-right"></i><strong>Emails:</strong>
+                      <a href="mailto:niassssn@gmail.com">niassssn@gmail.com</a>,
+                      <a href="mailto:khadim1.niass@ucad.edu.sn">khadim1.niass@ucad.edu.sn</a>,
+                      <a href="mailto:niasskhadim@outlook.com">niasskhadim@outlook.com</a>
                   </li>
                   <li>
                     <i class="bi bi-chevron-right"></i><strong>Téléphone:</strong>
@@ -138,8 +138,14 @@
             </p>
           </div>
         </div>
-
       </div>
+      <!--begin BADGE LINKEDIN -->
+      <section id="skills" class="skills  mt-2">
+        <div class="badge-base LI-profile-badge" data-locale="fr_FR" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="khadim-niass-developper" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://sn.linkedin.com/in/khadim-niass-developper?trk=profile-badge">Khadim NIASS 👨💻💻👨💻</a></div>
+      </section>
+      <hr>
+      <!--end BADGE LINKEDIN -->
+              
     </section>
     <!-- End About Section -->
 
@@ -908,5 +914,7 @@
   <!-- Start of HubSpot Embed Code -->
    <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/139542004.js"></script>
 <!-- End of HubSpot Embed Code -->
+
+<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </body>
 </html>
