add the correct link for linkedin

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="social-links mt-3 text-center">
           <a href="https://stackoverflow.com/users/18308310/khadim-niass" class="stack-overflow" target="_blank"><i class="bx bxl-stack-overflow"></i></a>
           <a href="https://gitlab.com/niassssn" class="gitlab" target="_blank"><i class="bx bxl-gitlab"></i></a>
-          <a href="https://linkedin.com/in/khadim-niass" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://linkedin.com/in/khadim-niass-developper" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/khadimniass" class="github" target="_blank"><i class="bx bxl-github"></i></a>
           <a href="https://wa.me/+221771958713" class="whatsapp" target="_blank"><i class="bx bxl-whatsapp"></i></a>
           <!--<a href="https://join.skype.com/invite/oxRyY0TgcASe" target="_blank" class="skype"><i class="bx bxl-skype"></i></a>
