--- a/index.html
+++ b/index.html
@@ -920,5 +920,14 @@
 <!-- End of HubSpot Embed Code -->
 
 <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PZN0ZKZJZW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PZN0ZKZJZW');
+</script>
 </body>
 </html>
