ajouter de la description sur la dernière expérience

--- a/index.html
+++ b/index.html
@@ -507,9 +507,11 @@
                   <li><b>PHP</b></li>
                   <li><b>JS-JQuey-Ajax</b></li>
                 </ul>
-                <li class="">
-                  
-                </li>
+                <div class="description">
+                        Mes journées chez livelean consiste à ajouter de nouvelles fonctionnalités,
+                        rassure le bon fonctionnement du plateform,
+                        intégration d'API
+                </div>
                 <li>
                   <a href="https://livelean.nl">
                     lien vers l'appli
